--- a/app.json
+++ b/app.json
@@ -1,7 +1,11 @@
 {
   "expo": {
-    "name": "Covid-19-App",
+    "name": "Covid 19",
     "slug": "Covid-19-App",
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -23,7 +27,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.erinxon.covidApp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
